Incluindo novas cartas de problemas no contexto de testes de software

--- a/CartasProblemaDificil/CD18.properties
+++ b/CartasProblemaDificil/CD18.properties
@@ -1,14 +1,14 @@
-codigo = CD14
-titulo = Equipe de testes sem treinamento
+codigo = CD18
+titulo = Ausência de testes de integração
 texto = O jogador perde 1 artefato de código.
-referenciaBibliografica = 
+referenciaBibliografica =
 duracaoEfeito = 1
-condicao = Jogador com artefatos de desenho < 6.
+condicao = Jogador com bugs em artefatos de código > 1
 quantidadePrimeiroEfeito = 1
 quantidadeSegundoEfeito = 0
 tipoPrimeiroEfeito = 26
 tipoSegundoEfeito = 0
-quantidadePrimeiraCondicao = 6
+quantidadePrimeiraCondicao = 1
 quantidadeSegundaCondicao = 0
-tipoPrimeiraCondicao = 45
+tipoPrimeiraCondicao = 7
 tipoSegundaCondicao = 0
