Referências para as cartas de teste

--- a/CartasConceitoDificil/CCD5.properties
+++ b/CartasConceitoDificil/CCD5.properties
@@ -1,7 +1,7 @@
 titulo = Uso de testes automatizados
 codigo = CCD5
 texto = Use essa carta para trocar até 2 cartas cinza por 2 cartas branca.
-referenciaBibliografica =
+referenciaBibliografica =  [Somerville 2011]
 duracaoEfeito = 1
 custo = 0
 quantidadePrimeiroEfeito = 2
