--- a/CartasConceitoDificil/CCD6.properties
+++ b/CartasConceitoDificil/CCD6.properties
@@ -1,7 +1,7 @@
 titulo = Desenvolvimento Orientado por Testes (TDD)
 codigo = CCD6
 texto = Use essa carta para adicionar 2 pontos na habilidade de um engenheiro de software em sua próxima rodada.
-referenciaBibliografica =
+referenciaBibliografica =  [Somerville 2011]
 duracaoEfeito = 1
 custo = 0
 quantidadePrimeiroEfeito = 2
