Referências para as cartas de teste

--- a/CartasProblemaDificil/CD17.properties
+++ b/CartasProblemaDificil/CD17.properties
@@ -1,7 +1,7 @@
 codigo = CD17
 titulo = Ausência de testes aceitação em fábrica (TAF)
 texto = Jogador perde 1 artefato de código.
-referenciaBibliografica = 
+referenciaBibliografica = [Somerville 2011]
 duracaoEfeito = 1
 condicao = Jogador com artefato de requisitos < 6.
 quantidadePrimeiroEfeito = 1
