--- a/CartasProblemaDificil/CD19.properties
+++ b/CartasProblemaDificil/CD19.properties
@@ -1,7 +1,7 @@
 codigo = CD19
 titulo = Casos de teste não especificados
 texto = O jogador perde 1 artefato de desenho e 1 de código.
-referenciaBibliografica = 
+referenciaBibliografica = [Somerville 2011]
 duracaoEfeito = 1
 condicao = Jogador com artefatos de código > 4.
 quantidadePrimeiroEfeito = 1
