--- a/CartasProblemaDificil/CD20.properties
+++ b/CartasProblemaDificil/CD20.properties
@@ -1,7 +1,7 @@
 codigo = CD20
 titulo =  Relatório de testes incompleto
 texto = Todos os engenheiros perdem 1 artefato.
-referenciaBibliografica = 
+referenciaBibliografica = [Somerville 2011]
 duracaoEfeito = 1
 condicao = 2 engenheiros de software com maturidade < 4.
 quantidadePrimeiroEfeito = 1
