--- a/CartasProblemaDificil/CD14.properties
+++ b/CartasProblemaDificil/CD14.properties
@@ -1,7 +1,7 @@
 codigo = CD14
 titulo = Equipe de testes sem treinamento
 texto = O jogador perde 1 artefato de código.
-referenciaBibliografica = 
+referenciaBibliografica = [Somerville 2011]
 duracaoEfeito = 1
 condicao = Jogador com artefatos de desenho < 6.
 quantidadePrimeiroEfeito = 1
