--- a/CartasProblemaDificil/CD16.properties
+++ b/CartasProblemaDificil/CD16.properties
@@ -1,7 +1,7 @@
 codigo = CD16
 titulo = Testes de unidade desatualizados
 texto = Todos os engenheiros do jogador perdem 1 artefato de desenho.
-referenciaBibliografica = 
+referenciaBibliografica = [Somerville 2011]
 duracaoEfeito = 1
 condicao = 2 engenheiros de software com maturidade < 3.
 quantidadePrimeiroEfeito = 1
