--- a/CartasProblemaDificil/CD18.properties
+++ b/CartasProblemaDificil/CD18.properties
@@ -1,7 +1,7 @@
 codigo = CD18
 titulo = Ausência de testes de integração
 texto = O jogador perde 1 artefato de código.
-referenciaBibliografica =
+referenciaBibliografica = [Somerville 2011]
 duracaoEfeito = 1
 condicao = Jogador com bugs em artefatos de código > 1
 quantidadePrimeiroEfeito = 1
